# hello-fast-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  renovate.json  requirements.txt
app/: config.py  db.py  deps.py  logger.py  main.py
app/apis/: users.py
app/models/: user.py
app/routers/: users.py
